--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@types/react-dom": "^18.0.11",
 		"astro": "^2.0.15",
 		"astro-seo": "^0.7.1",
+		"blockadblock": "^3.2.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"tailwindcss": "^3.2.7"
